--- a/css/style.css
+++ b/css/style.css
@@ -8,4 +8,24 @@ h1{
     background-color: rgb(128, 10, 238);
     text-align: center;
     color: white;
+    padding: 10px;
+    
+
+}
+#text{
+    background-color:rgb(21, 201, 237);
+    text-align: center;
+    padding: 15px;
+}
+body{
+    background-image: url(../img/img2.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    margin: 50px;
+    padding: 10px;
+  
+}
+h2{
+    color: white;
 }
